fixed z-index issue

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -68,6 +68,7 @@
   }
 
   svg {
+    position: relative;
     fill: $black;
     margin-right: 0.8rem;
     transform: scale(0.8);
