--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -133,6 +133,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
+  z-index: 999;
 
   .lightbox-container {
     display: flex;
